Fix dark mode box shadow.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,7 +33,7 @@ body.dark
     --light-accent: #70499e;
     --dark-accent:#351D61;
     --off-white: #e49f51;
-    --box-shadow:5px 5px 5px #070707;
+    --box-shadow:5px 5px 30px #292828;
     --light-dash:#adb1b4;
     --dark-dash:#5c5e5f;
     --blue-accent:#C7EDE6;
@@ -61,7 +61,7 @@ nav
     font-family: var(--header-font);
     text-align: center;
     font-size: .7rem;
-    box-shadow: 5px 5px 5px #a7adb3;
+    box-shadow: var(--box-shadow);
     z-index: 1;
 }
 .logo
@@ -118,7 +118,7 @@ nav
         "src src src src src src src acc acc acc"
         "grt grt grt grt grt grt grt btn btn btn"
         "grt grt grt grt grt grt grt btn btn btn";
-        box-shadow: 0px 5px 5px #a7adb3;
+        box-shadow: var(--box-shadow);
     position:sticky;
     top:0;
     z-index: 1;
